--- a/text/latex_text/kapitoly/konfigurace/3a_konfigurace_replikace_streaming.tex
+++ b/text/latex_text/kapitoly/konfigurace/3a_konfigurace_replikace_streaming.tex
@@ -74,7 +74,7 @@ SELECT usename, application_name, client_addr, state, sync_state FROM pg_stat_re
         \end{center}
     \end{table}
 
-Spuštění stejného SQL příkazu \texttt{pg\_stat\_replication} z \texttt{slave1}:
+Spuštění stejného SQL příkazu \texttt{pg\_stat\_replication} ze \texttt{slave1}:
 
     \begin{table}[H]
       \label{pgHba}
