--- a/text/latex_text/kapitoly/teorie/1_teorie_uvod.tex
+++ b/text/latex_text/kapitoly/teorie/1_teorie_uvod.tex
@@ -1,14 +1,14 @@
-Databáze je soubor vzájemně propojených datových složek, který slouží pro efektivní ukládání dat \citep{Oppel2009}. Ta jsou ukládána ve formě tabulek, entit a atributů, a jsou vzájemně propojeny logickými vazbami, které se nazývájí {\it relace} \citep{Connolly2005}. Toto logické uložení vazeb mezi tabulkami umožňuje efektivní manipulaci s daty, rychlé vyhledávání i komplexní analýzu \citep{Momjian2001}. 
+Databáze je strukturovaná kolekce dat. Slouží pro efektivní ukládání dat a jejich zpětně čtení \citep{Oppel2009}. V relační databáze jsou ukládána ve formě tabulek, tedy entit a atributů, a jsou vzájemně propojeny logickými vazbami, které se nazývájí {\it relace} \citep{Connolly2005}. Toto logické uložení vazeb mezi tabulkami umožňuje efektivní manipulaci s daty, rychlé vyhledávání i komplexní analýzu \citep{Momjian2001}. 
 
-Základy {\it relační databáze} položit v roce 1970 matematik E. F. Codd, který relačnímu modelu přidal i srozumitelné příkazy vycházejících z běžné angličtiny, které jsou dnes známy jako jazyk {\it SQL} (Structured Query Language)\citep{Zak2001}. V dnešní době je možné setkat se také s pojmy objektová a objektově-relační databáze, které přebírají řadu vlastností z oblasti objektového programování.
+Základy {\it relační databáze} položil v roce 1970 matematik E. F. Codd, který relačnímu modelu přidal i srozumitelné příkazy vycházejících z běžné angličtiny, které jsou dnes známy jako jazyk {\it SQL} (Structured Query Language)\citep{Zak2001}. V dnešní době je možné setkat se také s pojmy objektová a objektově-relační databáze, které přebírají řadu vlastností z oblasti objektového programování.
 
-Obvykle se rozlišují pojmy databáze, který odkazuje na obecný koncept, a pojem databázový systém nebo přesněji {\it systém řízení báze dat} \footnote{angl. Database Management System (DBMS)}, což je konkrétním počítačovým program, který zajišťuje fyzické uložení dat. Moderní SŘBD jsou navrženy na principu klient/server, kdy databáze běží jako služba na pozadí a čeká na dotazy od klientů. Server umožňuje uživatelům přístup k databázi, vytváření a aktualizování dat, stejně jak jako vyhledávání či analyzování \citep{Connolly2005}. Uživatel s databázi komunikuje skrze jazyk SQL většinou v kombinaci s vlastním jazykem daného databázového systému.
+Obvykle se rozlišují pojmy databáze, který odkazuje na obecný koncept, a pojem databázový systém nebo přesněji {\it systém řízení báze dat} \footnote{angl. Database Management System (DBMS)}, což je konkrétním počítačovým program, který zajišťuje fyzické uložení dat. Moderní SŘBD jsou navrženy na principu klient/server, kdy databáze běží jako služba na pozadí a čeká na dotazy od klientů. Server umožňuje uživatelům přístup k databázi, vytváření a aktualizace dat, stejně jak jako vyhledávání či analýzu \citep{Connolly2005}. Uživatel s databázi komunikuje skrze jazyk SQL většinou v kombinaci s vlastním jazykem daného databázového systému.
 
-Pro uložení dat malého projektu je samozřejmě možno použít i jiného formátu určeného pro ukládání dat, například tabulkového procesoru, formátu XML, či moderního JSON. Pro komplexní správu dat velkého projektu je však databáze pro své relace více než vhodná. 
+Pro uložení dat malého projektu je samozřejmě možno použít i jiného formátu určeného pro ukládání dat, například soubory formátu XLS, XML, CSV či moderního JSON. Pro komplexní správu dat velkého projektu je však databáze pro své relace více než vhodná. 
 
-Prostorová databáze, někdy také zvaná geodatabáze, není nic jiného než databáze přidaná o datový typ určený pro ukládání prostorové informace o prvku, prostorové indexy a sadu funkcí vhodných pro správu prostorových dat. Více informací o prostorových databázích v kapitole \odkazKapitola{PostgreSQL} PostgreSQL 9.x (PostGIS) a \odkazKapitola{MSSQL} MS SQL Server 2008. 
+Prostorová databáze, někdy také zvaná geodatabáze, není nic jiného než databáze obohacená o datový typ určený pro ukládání prostorové informace o prvku, prostorové indexy a sadu funkcí vhodných pro správu prostorových dat. Více informací o prostorových databázích viz kapitola \odkazKapitola{PostgreSQL} PostgreSQL 9.x (PostGIS) a \odkazKapitola{MSSQL} MS SQL Server 2008. 
 
-Z toho vyvstává otázka, co jsou prostorová data, také zvaná geodata. Z pohledu společnosti Esri se jedná se prvky, které nesou informaci o geografické poloze, zakódovanou informaci o tvaru (bod, line, polygon) a popis geografického jevu. Tato geodata jsou uložená ve formátu, který je možno použít v geografickém informačním systému \citep{Esri2006}. Příkladem takového formátu může být vektorový Esri shapefile, Esri coverage, GML, KML, GeoJSON nebo rastrový Erdas Image a GeoTIFF. Dalším způsobem je již zmíněná databáze, do níž se vektorová data ukládají ve specifickém tvaru daném standardem OGC\footnote{OGC standardy jsou kontrolované konsorciem Open Geospatial Consortium, zdroj \url{http://www.opengeospatial.org/ogc}} Simply Feature for SQL 1.2.1, který specifikuje způsob uložení dat v digitální podobě. Simple Features je založen na 2D geometrii s~možností lineární interpolace mezi lomovými body. To umožňuje vložení následujících prvků:
+Prostorová data, také zvaná geodata, jsou z pohledu společnosti Esri prvky, které nesou informaci o geografické poloze, zakódovanou informaci o tvaru (bod, line, polygon) a popis geografického jevu. Tato geodata jsou uložená ve formátu, který je možno použít v geografickém informačním systému \citep{Esri2006}. Příkladem takového formátu může být vektorový Esri shapefile, Esri coverage, GML, KML, GeoJSON nebo rastrový Erdas Image a GeoTIFF. Dalším způsobem je již zmíněná databáze, do níž se vektorová data ukládají ve specifickém tvaru daném standardem OGC\footnote{OGC standardy jsou kontrolované konsorciem Open Geospatial Consortium,\newline zdroj \url{http://www.opengeospatial.org/ogc}} Simply Feature for SQL 1.2.1, který specifikuje způsob uložení dat v digitální podobě. Simply Feature je založen na 2D geometrii s~možností lineární interpolace mezi lomovými body. To umožňuje vložení následujících prvků:
 
         \begin{itemize}
           \item bod - POINT(0 0),
@@ -28,6 +28,6 @@ Hodnoty lze dále vkládat přes Well-Known Binary (WKB) nebo Well-Known Text (W
           \item ST\_AsText(geometry) pro WKT text
         \end{itemize}
 
-        Příklad uložení linie do databáze s jedním lomovým bodem v souřadnicovém systému WGS84:
+Příklad použití formátu pro uložení linie do databáze s jedním lomovým bodem v souřadnicovém systému WGS84:
 
         \texttt{(LINESTRING(15.91 50.84, 17.20 49.64, 18.92 49.82), 4326)}
