--- a/text/latex_text/kapitoly/teorie/2_vymezeni_pojmu.tex
+++ b/text/latex_text/kapitoly/teorie/2_vymezeni_pojmu.tex
@@ -1,10 +1,7 @@
         \subsection{Vymezení pojmů}
-Pro lepší porozumění textu této práce je potřeba definovat pojmy replikace, synchronizace a verzování, včetně popisu toho, jak jsou dané pojmy chápány v produktech ArcGIS. Je vhodné upozornit, že výše zmíněné procesy jsou v literatuře často užívány lehce odlišně. Některé zdroje pojmy replikace a synchronizace rozlišují, jiné je naopak považují za synonyma. 
+Pro lepší porozumění textu této práce je potřeba definovat pojmy replikace, synchronizace a verzování včetně popisu toho, jak jsou dané pojmy chápány v produktech ArcGIS. Výše zmíněné procesy jsou v literatuře často popisovány lehce odlišně. Některé zdroje pojmy replikace a synchronizace rozlišují, jiné je naopak považují za synonyma. Všechny zmíněné pojmy souvisí se zálohováním dat, tedy kopírovaním dat mezi dvěmi a více uložišti a se liší konkrétním důvodem pro použití daného procesu. 
 
-Všechny dotyčné pojmy úzce souvisí se zálohováním dat, tedy kopírovaním dat mezi dvěmi a více uložišti. To, co tyto pojmy spojuje, je totiž vždy, v nějaké míře, zabránění ztráty dat, ať už chybou či fyzickým poškozením disku. Dané pojmy se poté liší například konkrétním způsobem provedení zálohy, či konkrétním důvodem pro použití daného procesu.
-
-Synchronizace je obecnější pojem, který může být považován za nadmnožinou replikace. V případě, že existují dva datové zdroje, které je potřeba v daný okamžik sjednotit, je možno mluvit o synchronizaci souborů či datových složek. U souborů se shodným názvem se porovnává čas posledního zápisu, velikost nebo obsah souboru, naopak soubory, které shodu nezaznamenají, jsou jednoduše zkopírovány. Synchronizací se tedy dá proces označit v okamžiku, kdy existují nejméně dva datové zdroje a smyslem synchronizace je porovnat tato uložiště a dostat je do stejného stavu. To může například přispět snazší spolupráci více uživatelů nad stejnými daty nebo uživateli, který pracuje na více počítačích.
-
+O synchronizaci souborů či datových složek je možno mluvit v případě, že existují dva datové zdroje, které je potřeba v daný okamžik sjednotit. U souborů se shodným názvem se porovnává čas posledního zápisu, velikost nebo obsah souboru, naopak soubory, u kterých nebyla nalezena shoda, jsou jednoduše zkopírovány. Důvodem pro synchronizaci je většinou porování dvou a více datových uložišť a potřeba dostat je totožného stavu. To může například přispět snazší spolupráci více uživatelů nad stejnými daty nebo pomoct uživateli, který pracuje na více počítačích. 
 
         %parametr H říká že to bude přímo na tom místě kde je v textu...více http://en.wikibooks.org/wiki/LaTeX/Floats,_Figures_and_Captions
           \begin{figure}[H]
@@ -13,9 +10,9 @@ Synchronizace je obecnější pojem, který může být považován za nadmnoži
             \caption {Příklad obousměrné synchronizace dat mezi dvěmi datovými uložišti}
           \end{figure}
 
-Replikace naopak začíná s daty existujícími pouze na jednom uložišti. Často je tento proces používán právě ve spojitosti s databázemi, kdy je kopie dat (také replika) tvořena z důvodu snížení zátěže serveru, či ochraně dat. Replikace je tedy často vyžadována z jiných důvodů než synchronizace a pro zajištění konzistence dat používá jiných technologií. V případě, že je již kopie vytvořena, je poté možno mluvit i o synchronizaci dat, protože replika průběžně kontroluje, zda na hlavním serveru nedošlo ke změně, a pokud ano, dané změny zkopíruje. Více se replikací zabývá kapitola \odkazKapitola{kReplikace} Replikace.
+Replikace začíná s daty existujícími pouze na jednom uložišti. Často je tento proces používán právě ve spojitosti s databázemi, kdy je kopie dat (také replika) tvořena z důvodu snížení zátěže serveru, či ochrany dat. Replikace je tedy často vyžadována z jiných důvodů než synchronizace a pro zajištění konzistence dat používá jiných technologií. V případě, že je již kopie vytvořena, je poté možno mluvit i o synchronizaci dat, protože server průběžně kontroluje, zda ve zdrojových datech nedošlo ke změně, a pokud ano, dané změny zkopíruje. Více se replikací zabývá kapitola \odkazKapitola{kReplikace} Replikace.
 
-Oba procesy je možno použít jednostranně, tedy kopírovat data pouze z jednoho uložiště na druhé a nikolik opačně, nebo oboustraně, kdy se datové zdroje kopírují navzájem mezi sebou.
+Oba procesy je možno použít jednostranně, tedy kopírovat data pouze z jednoho uložiště na druhé a nikoliv opačně, nebo oboustraně, kdy se data kopírují navzájem mezi sebou.
 
 Specifickým způsobem zálohy dat je verzování, kdy se data na záložním datovém uložišti nepřepisují, ale systematicky ukládající v takzvaných verzích tak, aby se uživatel mohl snadno kdykoliv vrátit k předchozím stavům souborů. Smyslem verzování je zachovat všechny zvolené stavy práce, čímž se verzování liší od zálohování, kde stačí mít aktuální kopii daných dat. To, co je zde popsáno jako verzování, se v produktech ArcGIS nazývá archivování dat \citep{Law2008}. 
 
@@ -26,12 +23,9 @@ Verzování může probíhat ručně, poloautomatizovaně či plně automatizova
             \includegraphics[scale=1]{../../../grafy/obr/schema_verzovani_maxiTence.png}
             \caption {Příklad verzování souboru}
           \end{figure}
+Samotná databáze verzování dat neumožňuje. Nejsnazší způsob, jak získat verzi dat, je export databáze do souboru. Takový soubor je poté možno verzovat podobným způsobem jako jakýkoliv jiný soubor. Totéž platí i pokud v databázi ukládáme geodata. Podobně jako pro textová data, byl pro prostorová data vytvořen verzovací systém GeoGIT, který vychází z již zmiňovaného systému Git. Umožňuje uživatelům uchovávat změny v souborech shapefile, SpatialLite a z databáze PostGIS (PostgreSQL) a stejně tak jako Git se vrátit ke kterékoli předchozích verzí nebo sledovat konkrténí změny, které v datech nastaly od posledního záznamu. 
 
-Samotná databáze verzování dat neumožňuje. Nejsnazší způsob, jak získat verzi dat, je skriptem \texttt{dump}, který exportuje databázi do souboru. V MS SQL Serveru je tento proces nazýván Snapshot, tedy snímek databáze nebo také snímková replikace. Takový soubor se poté může verzovat podobným způsobem jako jakýkoliv jiný binární soubor typu shapefile. A to samé platí i pokud v databázi ukládáme geodata. 
-
-Proto byl vytvořen verzovací systém také pro prostorová data, který vychází ze systému Git a nese název GeoGIT. Umožňuje uživatelům uchovávat změny v souborech shapefile, SpatialLite a z databáze PostGIS (PostgreSQL), stejně tak jako vrátit se k jakékoliv z předchozích verzí. 
-
-Verzování může být chápáno také jako vytvoření pracovní verze. V případě, že programový kód či data jsou plně funkční či správná, ale je potřeba je aktualizovat, testovat či jinak měnit, pak je vhodné vytvořit tzn. pracovní verzi, aby nedošlo k poškození té aktuální. Jedná se o kopii aktuálního stavu, na které je možno pracovat a zkoušet. V případě, že práce nedopadne podle představ, je možno změny zahodit, pokud je tomu naopak, je možno pracovní verzi sjednotit s platnou verzí. Tento způsob verzování umožňuje Git i GeoGIT a takto chápe pojem verzování i společnosti Esri.
+Verzování může být chápáno také jako vytvoření pracovní verze. V případě, že jdou data bezchybná, ale je potřeba je aktualizovat, testovat či jinak měnit, pak je vhodné vytvořit tzn. pracovní verzi, aby nedošlo k jejich poškození. Jedná se tedy o kopii aktuálního stavu, na které je možno pracovat a zkoušet. V případě, že práce nedopadne podle představ, je možno změny zahodit, pokud je tomu naopak, je možno pracovní verzi sjednotit s platnou verzí. Tento způsob verzování umožňuje Git i GeoGIT a takto chápe pojem verzování i společnosti Esri. V případě databáze takto používáný způsob verzování navíc umožňuje více uživatelům editovat jednu databázi. V případě, že by si nevytvořili pracovaní verzi, ale pracovali přímo s daty uloženými v databázi, databázový systém by data zamknul a žádný jiný uživatel by je nesměl editovat. Verzování v produktech ArcGIS zajišťuje technologie ArcSDE, která bude více diskutována v kapitole \odkazKapitola{kArcSDE}.
 
           \begin{figure}[H]
             \centering
